--- a/app/src/main/res/layout/fragment_players.xml
+++ b/app/src/main/res/layout/fragment_players.xml
@@ -1,9 +1,9 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/news_recycler"
+    android:id="@+id/players_recycler"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.angryscarf.gamenews.Fragments.NewsFragment">
+    tools:context="com.angryscarf.gamenews.Fragments.PlayersFragment">
 
 
 </android.support.v7.widget.RecyclerView>
