--- a/app/src/main/res/layout/new_recycler_item.xml
+++ b/app/src/main/res/layout/new_recycler_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-    android:id="@+id/item_card_view"
+    android:id="@+id/new_item_card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
 
 
         <ImageView
-            android:id="@+id/item_image_view"
+            android:id="@+id/new_item_image_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
@@ -34,7 +34,7 @@
                 android:orientation="vertical">
 
         <TextView
-            android:id="@+id/item_text_title"
+            android:id="@+id/new_item_text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAllCaps="true"
@@ -44,7 +44,7 @@
             android:text="A rather long title for testing purposes"/>
 
         <TextView
-            android:id="@+id/item_text_description"
+            android:id="@+id/new_item_text_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
@@ -55,7 +55,7 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/item_image_favorite"
+                android:id="@+id/new_item_image_favorite"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
