--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,9 +1,15 @@
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/news_recycler"
+    android:id="@+id/news_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.angryscarf.gamenews.Fragments.NewsFragment">
+    tools:context="com.angryscarf.gamenews.Fragments.NewsFragment"
+    android:background="@color/colorBackgroundDark">
 
 
-</android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/news_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+</FrameLayout>
