--- a/app/src/main/res/layout/new_recycler_item.xml
+++ b/app/src/main/res/layout/new_recycler_item.xml
@@ -1,45 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:id="@+id/new_item_card_view"
+<android.support.v7.widget.CardView android:id="@+id/new_item_card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    >
+    app:cardBackgroundColor="@color/colorBackground"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="8dp">
 
-
-        <ImageView
-            android:id="@+id/new_item_image_view"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:layout_marginBottom="12dp"
-            android:src="@drawable/cover_default_no_game"
-            />
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
+            <ImageView
+                android:id="@+id/new_item_image_view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:orientation="vertical">
+                android:adjustViewBounds="true"
+                android:src="@drawable/cover_default_no_game"
+                />
+
+            <ImageView
+                android:id="@+id/new_item_image_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/new_item_image_view"
+                android:layout_marginTop="-48dp"
+                android:layout_marginRight="12dp"
+                android:src="@drawable/ic_favorite"/>
+
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/new_item_text_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:textAllCaps="true"
             android:textSize="20sp"
             android:maxLines="2"
+            android:textColor="@color/colorPrimaryText"
+            android:alpha="0.7"
 
             android:text="A rather long title for testing purposes"/>
 
@@ -47,20 +55,21 @@
             android:id="@+id/new_item_text_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:textSize="14sp"
             android:maxLines="4"
+            android:textColor="@color/colorPrimaryText"
 
             android:text="Short description about the new trying not to make it too long to not be able to fit in a few lines"/>
-
-            </LinearLayout>
-
-            <ImageView
-                android:id="@+id/new_item_image_favorite"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/ic_favorite"/>
-
-        </LinearLayout>
     </LinearLayout>
+
+
+    <FrameLayout
+        android:id="@+id/new_item_frame_game"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_gravity="bottom"
+        android:background="@color/colorGameDefault"
+        />
+
 </android.support.v7.widget.CardView>
