--- a/app/src/main/res/layout/player_recycler_item.xml
+++ b/app/src/main/res/layout/player_recycler_item.xml
@@ -1,50 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/player_item_relative_layout"
+<android.support.v7.widget.CardView android:id="@+id/player_item_relative_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    android:layout_margin="4dp"
+    android:padding="8dp"
+    app:cardBackgroundColor="@color/colorBackground"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="5">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-        <TextView
-            android:id="@+id/player_item_text_name"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:layout_weight="10">
+
+            <TextView
+                android:id="@+id/player_item_text_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryText"
+                android:maxLines="1"
+
+                android:text="Player Name"/>
+
+            <TextView
+                android:id="@+id/player_item_text_game"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/colorPrimaryText"
+                android:alpha="0.7"
+
+                android:text="game name"
+                />
+        </LinearLayout>
+
+
+        <com.github.siyamed.shapeimageview.CircularImageView
+            android:id="@+id/player_item_image_avatar"
             android:layout_width="wrap_content"
+            android:maxWidth="76dp"
             android:layout_height="wrap_content"
-
-            android:textSize="20sp"
-            android:maxLines="1"
-
-            android:text="Player Name"/>
-
-        <TextView
-            android:id="@+id/player_item_text_game"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textAllCaps="true"
-
-            android:text="game name"
+            android:adjustViewBounds="true"
+            app:siBorderWidth="0dp"
+            app:siBorderAlpha="0"
+            android:src="@drawable/avatar_default"
             />
     </LinearLayout>
 
-
-    <ImageView
-        android:id="@+id/player_item_image_avatar"
-        android:layout_width="wrap_content"
-        android:maxWidth="144dp"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/player_item_text_name"
-        android:layout_alignParentRight="true"
-
-
-        android:src="@drawable/avatar_default"
+    <FrameLayout
+        android:id="@+id/player_item_frame_game"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_gravity="bottom"
+        android:background="@color/colorGameDefault"
         />
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
