--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,31 +8,52 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
+    android:background="@color/colorBackgroundDark"
     >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:textSize="48dp"
+        android:textSize="48sp"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryText"
+        android:alpha="0.7"
 
-        android:text="Welcome to GameNews "
+        android:text="GameNews"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textSize="14sp"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryText"
+        android:alpha="0.4"
+
+        android:text="Powered by AngryScarf"
         />
 
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/login_edit_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:inputType="text"
+        android:textColor="@color/colorPrimaryText"
+        android:textColorHint="@color/colorPrimaryText"
+        android:backgroundTint="@color/colorSecondary"
         android:hint="Username"/>
 
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/login_edit_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
+
+        android:textColor="@color/colorPrimaryText"
+        android:textColorHint="@color/colorPrimaryText"
+        android:backgroundTint="@color/colorSecondary"
 
         android:layout_marginTop="16dp"
         android:hint="Password"/>
@@ -44,8 +65,8 @@
         android:layout_marginTop="32dp"
 
         android:textStyle="bold"
-        android:background="@color/colorPrimary"
-        android:textColor="#fff"
+        android:background="@color/colorSecondaryDark"
+        android:textColor="@color/colorSecondaryText"
 
 
         android:text="Login"/>
