--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:textColor="@color/colorPrimaryText"
         android:alpha="0.7"
 
-        android:text="GameNews"
+        android:text="@string/login_banner"
         />
     <TextView
         android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
         android:textColor="@color/colorPrimaryText"
         android:alpha="0.4"
 
-        android:text="Powered by AngryScarf"
+        android:text="@string/login_sub_banner"
         />
 
     <android.support.v7.widget.AppCompatEditText
@@ -43,7 +43,7 @@
         android:textColor="@color/colorPrimaryText"
         android:textColorHint="@color/colorPrimaryText"
         android:backgroundTint="@color/colorSecondary"
-        android:hint="Username"/>
+        android:hint="@string/login_username_hint"/>
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/login_edit_password"
@@ -56,7 +56,7 @@
         android:backgroundTint="@color/colorSecondary"
 
         android:layout_marginTop="16dp"
-        android:hint="Password"/>
+        android:hint="@string/login_password_hint"/>
 
     <Button
         android:id="@+id/login_button_login"
@@ -69,5 +69,5 @@
         android:textColor="@color/colorSecondaryText"
 
 
-        android:text="Login"/>
+        android:text="@string/login_button"/>
 </LinearLayout>
