--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,26 +7,26 @@
         <item
             android:id="@+id/nav_all"
             android:icon="@drawable/ic_videogame"
-            android:title="All" />
+            android:title="@string/drawer_all_news" />
         <item
             android:id="@+id/nav_lol"
             android:icon="@drawable/ic_lol"
-            android:title="League of Legends" />
+            android:title="@string/lol_game_name" />
         <item
             android:id="@+id/nav_csgo"
             android:icon="@drawable/ic_hunt_cross"
-            android:title="CS: Global Offensive" />
+            android:title="@string/csgo_game_name" />
         <item
             android:id="@+id/nav_overwatch"
             android:icon="@drawable/ic_overwatch"
-            android:title="Overwatch" />
+            android:title="@string/overwatch_game_name" />
     </group>
 
-    <item android:title="Account">
+    <item android:title="@string/drawer_account">
         <menu>
             <item
                 android:id="@+id/nav_logout"
-                android:title="Log out"
+                android:title="@string/drawer_log_out"
                 android:icon="@drawable/ic_menu_manage"/>
         </menu>
     </item>
